# Ghobdcalc

Ghobdcalc/: ChangeLog  Makefile  README  config.h  config.h.in  configure  configure.ac
Ghobdcalc/Sources/: Ghobdcalc.desktop  Ghodbcalc.c  bases_utils.c  gui_utils.c  main_utils.c
Ghobdcalc/Sources/GUI/: about_dialog.c  export_dialog.c  messages.c  structures.c  structures.h
Ghobdcalc/Sources/README/: README.html  README.rst  README.txt
Ghobdcalc/Sources/conversion/float_to_bin/: float_bin.c
Ghobdcalc/Sources/conversion/float_to_hex/: float_hex.c
Ghobdcalc/Sources/conversion/float_to_oct/: float_oct.c
Ghobdcalc/Sources/conversion/int_bin/: int_bin.c
Ghobdcalc/Sources/conversion/int_hex/: int_hex.c
Ghobdcalc/Sources/conversion/int_oct/: calc_int_oct.c
Ghobdcalc/Sources/conversion/utils/: conversion_utils.c
Ghobdcalc/Sources/structures/: structures.c  structures.h
Ghobdcalc/Sources/utils/: inputs_utils.c  memory_utils.c  operations_utils.c  result_utils.c  saving_utils.c  string_utils.c  string_utils1.c
Ghobdcalc/autom4te.cache/: output.0  requests  traces.0  traces.1
